[package]
name = "rusvm-wasm"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Use rusvm to solve SVM training problems on wasm"
repository = "https://github.com/wotzlaff/rusvm-wasm"
keywords = ["smo", "svm", "machine-learning", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
rusvm = { version = "*", default-features = false, features= ["wasm"] }
console_error_panic_hook = "*"
